Wed Jun 29 10:11:08 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Add Matrix#diagonal?, hermitian?, normal?,
	  orthogonal?
	  permutation?, symmetric?, {lower|upper}triangular?, unitary?, zero?

Wed Jun 29 10:09:35 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Specialize Matrix#find_index to return [row, col]
	  and accept the same optional argument as #each

Wed Jun 29 10:07:32 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Matrix#each{_with_index} can iterate over a subset
	  of the Matrix

Wed Jun 29 06:21:02 2011  Koichi Sasada  <ko1@atdot.net>

	* thread_pthread.c (native_stop_timer_thread): skip to close
	  communication pipe to avoid timing bug (process termination timing).
	  The communication pipe will closed by OS.

Wed Jun 29 06:09:54 2011  Koichi Sasada  <ko1@atdot.net>

	* error.c (rb_async_bug_errno): async-safe bug report function.
	  In timer thread, signal handler shoul use it.
	  The patch is contributed by Eric Wong <normalperson@yhbt.net>.
	  Refs: [ruby-core:37644] and [ruby-core:37647]

	* thread_pthread.c: use rb_async_bug_errno().
	  And replace all fprintf() to write().

	* internal.h (rb_async_bug_errno): add decl. of above func.

Tue Jun 28 23:46:08 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/tracer.rb: count only non-internal libraries in stack trace,
	  ignoring custom_require. 

Tue Jun 28 21:44:58 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/irb/ruby-lex.rb: recognize '\char' in ruby statement.

Tue Jun 28 20:39:29 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* lib/debug.rb (var_list): Command 'var *' did not work on 1.9(!).
	  global_variables, local_variables, and instance_variables returns
	  Symbols from 1.9 and need to stringify before evaling it.
	  See #4931.

Tue Jun 28 19:23:01 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* signal.c: Now, USE_TRAP_SIGMASK depend on HAVE_PTHREAD_SIGMASK.