@@ -168,10 +168,12 @@ with all sufficient information, see the ChangeLog file.
     * Matrix#unitary?
     * Matrix#upper_triangular?
     * Matrix#zero?
+    * Vector#magnitude
   * extended methods:
     * Matrix#each and #each_with_index can iterate on a subset of the elements
     * Matrix#find_index returns [row, column] and can iterate on a subset
       of the elements
+    * Matrix.zero can build rectangular matrices
 
 * net/http
   * SNI (Server Name Indication) supported for HTTPS. 
